<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <ImageView
            android:layout_marginLeft="13dp"
            android:layout_width="18dp"
            android:layout_height="18dp" />
        <TextView
            android:textColor="@color/colorLightGrey"
            android:textSize="18dp"
            android:text="选择搜索设备类型"
            android:layout_marginLeft="86dp"
            android:layout_width="130dp"
            android:layout_height="24dp" />
    </LinearLayout>
    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:background="@drawable/button_style"
                android:id="@+id/device_type_select_0"
                android:text="@string/select_btn_0"
                android:textColor="@color/my_text_color"
                android:textSize="13dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="14dp"
                android:layout_width="88dp"
                android:layout_height="34dp"/>
            <Button
                android:background="@drawable/button_style"
                android:id="@+id/device_type_select_1"
                android:text="@string/select_btn_1"
                android:textColor="@color/my_text_color"
                android:textSize="13dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_width="88dp"
                android:layout_height="34dp"/>
            <Button
                android:background="@drawable/button_style"
                android:id="@+id/device_type_select_2"
                android:text="@string/select_btn_2"
                android:textColor="@color/my_text_color"
                android:textSize="13dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="20dp"
                android:layout_width="88dp"
                android:layout_height="34dp"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/device_type_select_3"
                android:layout_width="88dp"
                android:layout_height="34dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/button_style"
                android:text="@string/select_btn_3"
                android:textColor="@color/my_text_color"
                android:textSize="13dp" />

        </TableRow>
    </TableLayout>
</LinearLayout>
