<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="@drawable/bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="11%"
        android:background="@drawable/login_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        />
    <ImageView
        android:layout_gravity="center_horizontal"
        app:layout_marginTopPercent="27%"
        app:layout_widthPercent="88%"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_wel"
        app:layout_heightPercent="3.6%"
        />

    <android.support.percent.PercentRelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/white_background"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="36%"
        app:layout_marginTopPercent="38%"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:id="@+id/loginLayout">

        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:layout_heightPercent="21%"
            app:layout_marginTopPercent="0%">

            <ImageView
                android:background="@drawable/accounticn"
                android:id="@+id/img1"
                app:layout_widthPercent="6%"
                app:layout_heightPercent="50.5%"
                app:layout_marginTopPercent="40%"
                app:layout_marginStartPercent="6.5%" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                app:layout_marginTopPercent="30%"
                app:layout_heightPercent="70%"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/img1"
                android:background="@null"
                android:digits="@string/input"
                android:hint="@string/account"
                android:gravity="left|center_vertical"
                android:textSize="15dp"
                />
        </android.support.percent.PercentRelativeLayout>
        <TextView
            android:layout_below="@id/layout1"
            android:layout_width="0dp"
            app:layout_widthPercent="85%"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:background="@color/colorBlackMap"
            />
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/layout2"
            android:layout_below="@id/layout1"
            app:layout_marginTopPercent="0%"
            android:layout_width="match_parent"
            app:layout_heightPercent="21%">
            <ImageView
                android:background="@drawable/passwdicn"
                android:id="@+id/img2"
                app:layout_widthPercent="6%"
                app:layout_heightPercent="50.5%"
                app:layout_marginTopPercent="40%"
                app:layout_marginStartPercent="6.5%"
                />
            <EditText
                android:id="@+id/et_passwd"
                android:layout_width="200dp"
                app:layout_marginTopPercent="30%"
                app:layout_heightPercent="70%"
                android:layout_toRightOf="@id/img2"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:digits="@string/input"
                android:textSize="15dp"
                android:hint="@string/password" />

            <ImageView
                android:id="@+id/show_passwd"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                app:layout_heightPercent="60.5%"
                app:layout_marginEndPercent="6.5%"
                app:layout_marginTopPercent="36%"
                app:layout_widthPercent="9.2%" />


        </android.support.percent.PercentRelativeLayout>
        <TextView
            android:layout_below="@id/layout2"
            android:layout_width="0dp"
            app:layout_widthPercent="85%"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp"
            android:background="@color/colorBlackMap"
            />

        <Button
            android:id="@+id/login"
            app:layout_marginTopPercent="13%"
            android:layout_below="@id/layout2"
            android:layout_centerInParent="true"
            android:layout_width="0dp"
            app:layout_heightPercent="15%"
            android:background="@drawable/blue_background"
            android:text="@string/login"
            android:textSize="16dp"
            android:textColor="@color/colorWhite"
            app:layout_widthPercent="90%" />
        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            app:layout_heightPercent="7.6%"
            app:layout_marginTopPercent="85%">

            <TextView
                android:gravity="left"
                android:id="@+id/forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:text="@string/forget"
                android:textSize="12dp"
                app:layout_marginStartPercent="5%" />

            <TextView
                android:gravity="right"
                android:id="@+id/join"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:autoLink="all"
                android:text="@string/join"
                android:textSize="12dp"
                app:layout_marginEndPercent="5%" />
        </android.support.percent.PercentRelativeLayout>

    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        app:layout_marginTopPercent="92%"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/contact_us"
            android:text="@string/contact_us"
            android:textSize="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            app:layout_marginStartPercent="28%"
            />
        <TextView
            android:text="|"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            app:layout_marginBottomPercent="5%"/>
        <TextView
            android:id="@+id/about_us"
            android:text="@string/about_us"
            android:textSize="12dp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:layout_marginEndPercent="28%"
            />

    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>